[package]
name = "process"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
bindings = { path = "../bindings" }
windows = "0.20.1"
hound = "3.4"
rustfft = "6.0.1"
plotters = "0.3.1"
# winapi = { version = "0.3", features = ["avrt"] }
